infra/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: adminer-strip
  namespace: noeticsearch
spec:
  stripPrefix:
    prefixes:
      - /adminer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noeticsearch-app
  namespace: noeticsearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: noeticsearch.huma-num.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noeticsearch-adminer
  namespace: noeticsearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: noeticsearch-adminer-strip@kubernetescrd
spec:
  rules:
    - host: noeticsearch.huma-num.fr
      http:
        paths:
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
